# g2o-python

./: pyproject.toml
.github/workflows/: python-package.yml  wheels.yml
