[build-system]
requires = ["setuptools", "wheel", "cmake", "pip", "scikit-build", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-all = "pip install numpy scipy"

[tool.cibuildwheel.macos]
before-build = "brew install eigen cmake ninja"

[tool.cibuildwheel.windows]
before-build = [
  "choco install eigen cmake ninja",
  "pip install delvewheel",
]
repair-wheel-command = "delvewheel repair --ignore-in-wheel -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux]
before-build = "yum install -y blas-devel flann-devel eigen3-devel cmake ninja"
repair-wheel-command = "auditwheel repair --ignore-in-wheel -w {dest_dir} {wheel}"
